--- a/Brewing/public/css/styles.css
+++ b/Brewing/public/css/styles.css
@@ -67,3 +67,21 @@
     transform: translateX(-5px);
 }
 
+.filter a {
+    position: relative;
+}
+
+.filter a:after {
+    content: '';
+    position: absolute;
+    inset: auto auto 0 0;
+    height: 1.5px;
+    width: 0%;
+    background: #333;
+    transition: all .2s ease-in-out;
+}
+
+.filter:hover a:after {
+    width: 100%;
+}
+
