--- a/Brewing/public/css/styles.css
+++ b/Brewing/public/css/styles.css
@@ -85,3 +85,21 @@
     width: 100%;
 }
 
+.result {
+    animation: fade-in 0.3s ease-in-out;
+}
+
+.result:hover {
+    background: #d2d2d2;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+
