--- a/Brewing/public/sneat/scss/_bootstrap-extended/_variables.scss
+++ b/Brewing/public/sneat/scss/_bootstrap-extended/_variables.scss
@@ -7,7 +7,7 @@
 // ? Use https://noeldelgado.github.io/shadowlord/ to select proper 💄 Color tints and shade for $black and $body-bg color.
 // ? color-variables and theme-color-variables (branding colors) can be choose as per your preferences. We suggest you to use https://colors.eva.design/
 // ! Light style use $black to generate the $gray shades.
-// (C) Custom variables for extended components of bootstrap only
+// (C) Custom variables for extended Story of bootstrap only
 
 // * Color system
 // *******************************************************************************
