--- a/Brewing/public/sneat/scss/_bootstrap.scss
+++ b/Brewing/public/sneat/scss/_bootstrap.scss
@@ -3,7 +3,7 @@
 // Import bootstrap core scss from node_module
 // ! Utilities are customized and added in bootstrap-extended
 
-// Layout & components
+// Layout & Story
 @import '../node_modules/bootstrap/scss/root';
 @import '../node_modules/bootstrap/scss/reboot';
 @import '../node_modules/bootstrap/scss/type';
