--- a/Brewing/public/sneat/scss/_components.scss
+++ b/Brewing/public/sneat/scss/_components.scss
@@ -1,6 +1,6 @@
 @import '_components/include';
 
-// Import components scss
+// Import Story scss
 @import '_components/base';
 @import '_components/common';
 @import '_components/menu';
