--- a/Brewing/resources/sass/app.scss
+++ b/Brewing/resources/sass/app.scss
@@ -1,2 +1,8 @@
-@import "~noty/src/noty.scss";
-@import "~noty/src/themes/mint.scss";
+// Fonts
+@import url('https://fonts.bunny.net/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import 'bootstrap/scss/bootstrap';
