--- a/Brewing/public/css/styles.css
+++ b/Brewing/public/css/styles.css
@@ -15,7 +15,7 @@
 
 .logo {
     font-family: 'margaret';
-    font-size: 36px;
+    font-size: 18px;
 }
 
 
@@ -120,6 +120,12 @@ body {
     }
     100% {
         opacity: 1;
+    }
+}
+
+@media (min-width: 1024px) {
+    .logo {
+        font-size: 36px;
     }
 }
 
